--- a/.gitmodules
+++ b/.gitmodules
@@ -3,8 +3,5 @@
 	url = https://github.com/anishathalye/dotbot
 	ignore = dirty
 [submodule "dotbot-brewfile"]
-	path = .plugins/dotbot-brewfile
+	path = dotbot-brewfile
 	url = https://github.com/sobolevn/dotbot-brewfile.git
-[submodule "dotbot-rust"]
-	path = .plugins/dotbot-rust
-	url = https://github.com/alexcormier/dotbot-rust
