--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -3,13 +3,13 @@
       create: true
       relink: true
 
-- clean: ['~', '~/.config']
+- clean: ["~", "~/.config"]
 
 - link:
     ~/.bash:
     ~/.bash_profile:
     ~/.bashrc:
-    ~/.dotfiles: ''
+    ~/.dotfiles: ""
     ~/.gitconfig:
     ~/.gitignore_global:
     ~/.shell:
@@ -18,24 +18,21 @@
     ~/.vimrc:
     ~/.zsh:
     ~/.zshrc:
+    ~/Brewfile:
 
 - create:
-  - ~/code
-  - ~/code/.cargo
-  - ~/notes
-  - ~/.vimdid
-
-- shell:
-  - git submodule sync --recursive
-  # the following have to run after linking ~/.gitconfig
-  - git update-submodules
-  - >
-    shell/plugins/
-    zsh/plugins/
+    - ~/code
+    - ~/code/.cargo
+    - ~/notes
+    - ~/.vimdid
 
 - brewfile:
-  file: Brewfile
+    file: Brewfile
 
-- cargo:
-  - whatfeatures
-  - add
+- shell:
+    - [git submodule update --init --recursive, Installing submodules]
+    - [curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y, Installing Rust]
+
+# Cleaning up:
+- shell:
+  - [brew cleanup, Cleaning up]
