--- a/alacritty.yml
+++ b/alacritty.yml
@@ -110,7 +110,7 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: Source Code Pro
+    family: Operator Mono
 
     # The `style` can be specified to pick a specific face.
     style: Italic
