--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "dotbot-brewfile"]
 	path = dotbot-brewfile
 	url = https://github.com/sobolevn/dotbot-brewfile.git
+[submodule "tmux/plugins/tpm/tpm"]
+	path = tmux/plugins/tpm/tpm
+	url = https://github.com/tmux-plugins/tpm
