update tmux and vimrc to fix minor issues

--- a/tmux.conf
+++ b/tmux.conf
@@ -12,8 +12,8 @@ set -g history-limit 5000
 # use vim key bindings
 setw -g mode-keys vi
 
-# disable mouse
-set -g mouse off
+# set mouse mode on
+setw -g mouse on
 
 # decrease command delay (increases vim responsiveness)
 set -sg escape-time 1
@@ -80,8 +80,8 @@ set -g status-justify left
 
 # show session, window, pane in left status bar
 set -g status-left-length 40
-set -g status-left '#[fg=green] #S #[fg=yellow]#I/#[fg=cyan] #{prefix_highlight} #P '
-set -g status-right '#{battery_status_bg} Batt: #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
+set -g status-left '#[fg=green] #S #[fg=yellow]#I/#[fg=cyan] #P '
+set -g status-right '#{prefix_highlight} Battery: #[fg=yellow]#{battery_percentage} #[fg=white]| %a %h-%d %H:%M '
 
 ###########################
 # Colors
@@ -100,6 +100,9 @@ setw -g window-status-current-style fg=white,bold,bg=red
 set -g pane-border-style fg=colour240,bg=black
 set -g pane-active-border-style fg=green,bg=black
 
+# Set prefix highlight colors
+set -g @prefix_highlight_bg 'blue'  # default is 'colour04'
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
@@ -109,10 +112,10 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # * Restore with: prefix + Ctrl-r
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 # restore vim and nvim sessions as well
-	# for vim
-	set -g @resurrect-strategy-vim 'session'
-	# for neovim
-	set -g @resurrect-strategy-nvim 'session'
+# for vim
+set -g @resurrect-strategy-vim 'session'
+# for neovim
+set -g @resurrect-strategy-nvim 'session'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 # Automatic restore
 set -g @continuum-restore 'on'
