update git config and tmux config

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,7 @@
 # Prefix
 unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
+set-option -g prefix C-space
+bind-key C-space send-prefix
 
 set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
@@ -52,15 +52,22 @@ bind | split-window -h # Prefix | to create vertical split
 unbind '"'
 bind - split-window -v # Prefix - to create horizontal split
 
-# Switch panes with hjkl
-bind C-h select-pane -L
-bind C-j select-pane -D
-bind C-k select-pane -U
-bind C-l select-pane -R
+# smart pane switching with awareness of vim splits
+bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
+bind -n C-\\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 # Quick window selection
 bind -r h select-window -t :-   # Jump to window on the left
 bind -r l select-window -t :+   # Jump to window on the right
+
+# resize panes using the arrow keys
+bind Right resize-pane -R 5
+bind Left resize-pane -L 5
+bind Up resize-pane -U 2
+bind Down resize-pane -D 2
  
 ############################
 ## Status Bar
@@ -81,7 +88,7 @@ set -g status-justify left
 # show session, window, pane in left status bar
 set -g status-left-length 40
 set -g status-left '#[fg=green] #S #[fg=yellow]#I/#[fg=cyan] #P '
-set -g status-right '#{prefix_highlight} Battery: #[fg=yellow]#{battery_percentage} #[fg=white]| %a %h-%d %H:%M '
+set -g status-right '#{prefix_highlight} #[default]#(tmux display-message -p "#S" Battery: #[fg=yellow]#{battery_percentage} #[fg=white]| %a %h-%d %H:%M '
 
 ###########################
 # Colors
