symlink coc-settings and update styling on error/warning

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -22,6 +22,7 @@
     ~/.Brewfile:
     ~/.alacritty.yml:
     ~/.config/nvim/init.vim: init.vim
+    ~/.config/nvim/coc-settings.json: vim/coc-settings.json
 
 - create:
     - ~/code
@@ -29,11 +30,16 @@
     - ~/notes
     - ~/.vimdid
 
+- shell:
+    - [git submodule update --init --recursive, Installing submodules]
+    - [
+        curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y,
+        Installing Rust,
+      ]
+
 - brewfile:
     file: Brewfile
 
 - shell:
-    - [git submodule update --init --recursive, Installing submodules]
-    - [curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y, Installing Rust]
     - pip3 install --user neovim
     - [brew cleanup, Cleaning up]
