--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -1,11 +1,10 @@
 {
-  "coc.preferences.formatOnSaveFiletypes": [
-    "*"
-  ],
+  "coc.preferences.formatOnSaveFiletypes": ["*"],
   "rust.clippy_preference": "on",
-  "eslint.filetypes": [
-    "*"
-  ],
+  "eslint.filetypes": ["*"],
   "eslint.autoFixOnSave": true,
-  "rust-analyzer.checkOnSave.command": "clippy"
+  "rust-analyzer.checkOnSave.command": "clippy",
+  "diagnostic.virtualText": true,
+  "diagnostic.virtualTextCurrentLineOnly": false,
+  "diagnostic.messageTarget": "echo"
 }
