update snippets to work properlly

--- a/tmux.conf
+++ b/tmux.conf
@@ -88,7 +88,7 @@ set -g status-justify left
 # show session, window, pane in left status bar
 set -g status-left-length 40
 set -g status-left '#[fg=green] #S #[fg=yellow]#I/#[fg=cyan] #P '
-set -g status-right '#{prefix_highlight} #[default]#(tmux display-message -p "#S" Battery: #[fg=yellow]#{battery_percentage} #[fg=white]| %a %h-%d %H:%M '
+set -g status-right '#{prefix_highlight} Battery: #[fg=yellow]#{battery_percentage} #[fg=white]| %a %d %h %H:%M '
 
 ###########################
 # Colors
