add local override options to tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -136,5 +136,7 @@ set -g @plugin 'tmux-plugins/tmux-battery'
 # Tmux Prefix Highlight
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
+if '[ -f ~/.tmux_local.conf ]' 'source ~/.tmux_local.conf'
+
 # Run Tmux Plugin Manager
 run '~/.tmux/plugins/tpm/tpm/tpm'
