feat(fonts): update fonts and tidy up files

--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -3,8 +3,8 @@
   "rust.clippy_preference": "on",
   "eslint.filetypes": ["*"],
   "eslint.autoFixOnSave": true,
-  "rust-analyzer.checkOnSave.command": "clippy",
   "diagnostic.virtualText": true,
   "diagnostic.virtualTextCurrentLineOnly": false,
-  "diagnostic.messageTarget": "echo"
+  "diagnostic.messageTarget": "echo",
+  "rust-analyzer.checkOnSave.command": "clippy"
 }
