--- a/tmux.conf
+++ b/tmux.conf
@@ -3,7 +3,7 @@ unbind C-b
 set-option -g prefix C-space
 bind-key C-space send-prefix
 
-set -g default-terminal "screen-256color"
+set -s default-terminal "xterm-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
 
 # increase scroll-back history
