fix(terminal): fix italics showing in terminal

--- a/tmux.conf
+++ b/tmux.conf
@@ -3,8 +3,8 @@ unbind C-b
 set-option -g prefix C-space
 bind-key C-space send-prefix
 
-set -s default-terminal "screen-256color"
-set -ga terminal-overrides ",screen-256color:Tc"
+set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
 
 # increase scroll-back history
 set -g history-limit 5000
