slight tidy up of init.vim - still not working quite as I'd like

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -21,6 +21,7 @@
     ~/.zshrc:
     ~/.Brewfile:
     ~/.alacritty.yml:
+    ~/.config/nvim: nvim
     ~/.config/nvim/init.vim: init.vim
     ~/.config/nvim/coc-settings.json: vim/coc-settings.json
     ~/.config/coc/ultisnips: ultisnips
