--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -1,10 +1,20 @@
 {
   "coc.preferences.formatOnSaveFiletypes": ["*"],
   "rust.clippy_preference": "on",
-  "eslint.filetypes": ["*"],
   "eslint.autoFixOnSave": true,
   "diagnostic.virtualText": true,
   "diagnostic.virtualTextCurrentLineOnly": false,
   "diagnostic.messageTarget": "echo",
-  "rust-analyzer.checkOnSave.command": "clippy"
+  "rust-analyzer.checkOnSave.command": "clippy",
+  "rust-analyzer.checkOnSave.allFeatures": true,
+  "rust-analyzer.hoverActions.enable": true,
+  "rust-analyzer.cargo.loadOutDirsFromCheck": true,
+  "rust-analyzer.procMacro.enable": true,
+  "rust-analyzer.completion.postfix.enable": false,
+  "rust-analyzer.lens.methodReferences": true,
+  "rust-analyzer.hoverActions.linksInHover": true,
+  "rust-analyzer.debug.runtime": "vimspector",
+  "rust.wait_to_build": 250,
+  "rust-analyzer.completion.autoimport.enable": true,
+  "rust-analyzer.lruCapacity": 256
 }
