--- a/tmux.conf
+++ b/tmux.conf
@@ -4,8 +4,8 @@ set-option -g prefix C-space
 bind-key C-space send-prefix
 
 # https://gist.github.com/joshuarli/247018f8617e6715e1e0b5fd2d39bb6c
-set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",*256color:Tc"
 
 # increase scroll-back history
 set -g history-limit 5000
