--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -7,6 +7,7 @@
   "diagnostic.messageTarget": "echo",
   "rust-analyzer.checkOnSave.command": "clippy",
   "rust-analyzer.checkOnSave.allFeatures": true,
+  "rust-analyzer.cargo.allFeatures": true,
   "rust-analyzer.hoverActions.enable": true,
   "rust-analyzer.cargo.loadOutDirsFromCheck": true,
   "rust-analyzer.procMacro.enable": true,
@@ -16,5 +17,12 @@
   "rust-analyzer.debug.runtime": "vimspector",
   "rust.wait_to_build": 250,
   "rust-analyzer.completion.autoimport.enable": true,
-  "rust-analyzer.lruCapacity": 256
+  "rust-analyzer.lruCapacity": 256,
+  "rust-analyzer.assist.importMergeBehavior": "last",
+
+  "rust-analyzer.hover.linksInHover": true,
+  "rust-analyzer.assist.importGranularity": "module",
+  "rust-analyzer.cargo.runBuildScripts": true,
+  "rust-analyzer.assist.importEnforceGranularity": true,
+  "rust-analyzer.experimental.procAttrMacros": true
 }
