feat(plugins): update config for more ide like experience

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,8 +4,8 @@ set-option -g prefix C-space
 bind-key C-space send-prefix
 
 # https://gist.github.com/joshuarli/247018f8617e6715e1e0b5fd2d39bb6c
-set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",xterm-256color:Tc"
+# set -g default-terminal "tmux-256color"
+# set -ga terminal-overrides ",xterm-256color:Tc"
 
 # increase scroll-back history
 set -g history-limit 5000
@@ -138,6 +138,9 @@ set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
 if '[ -f ~/.tmux_local.conf ]' 'source ~/.tmux_local.conf'
+
+if "test ! -d ~/.tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 
 # Run Tmux Plugin Manager
 run '~/.tmux/plugins/tpm/tpm/tpm'
