feat(zj): update config

--- a/zellij/config.yaml
+++ b/zellij/config.yaml
@@ -9,7 +9,7 @@ keybinds:
     unbind: true
     normal:
         - action: [SwitchToMode: Locked,]
-          key: [Ctrl: 'g',]
+          key: [Ctrl: 'z',]
         - action: [SwitchToMode: Pane,]
           key: [Ctrl: 'p',]
         - action: [SwitchToMode: Resize,]
@@ -21,7 +21,7 @@ keybinds:
         - action: [SwitchToMode: Session,]
           key: [Ctrl: 'o',]
         - action: [SwitchToMode: Move,]
-          key: [Ctrl: 'm',]
+          key: [Ctrl: 'x',]
         - action: [SwitchToMode: Tmux,]
           key: [Ctrl: 'b',]
         - action: [Quit,]
@@ -44,10 +44,18 @@ keybinds:
           key: [ Ctrl: '-']
     locked:
         - action: [SwitchToMode: Normal,]
-          key: [Ctrl: 'g',]
+          key: [Ctrl: 'z',]
+        - action: [MoveFocusOrTab: Left,]
+          key: [ Ctrl: 'h', Alt: Left]
+        - action: [MoveFocusOrTab: Right,]
+          key: [ Ctrl: 'l', Alt: Right ]
+        - action: [MoveFocus: Down,]
+          key: [ Ctrl: 'j', Alt: Down]
+        - action: [MoveFocus: Up,]
+          key: [ Ctrl: 'k', Alt: Up, ]
     resize:
         - action: [SwitchToMode: Locked,]
-          key: [Ctrl: 'g']
+          key: [Ctrl: 'z']
         - action: [SwitchToMode: Pane,]
           key: [Ctrl: 'p',]
         - action: [SwitchToMode: Tab,]
@@ -59,7 +67,7 @@ keybinds:
         - action: [SwitchToMode: Session,]
           key: [Ctrl: 'o',]
         - action: [SwitchToMode: Move,]
-          key: [Ctrl: 'h',]
+          key: [Ctrl: 'x',]
         - action: [SwitchToMode: Tmux,]
           key: [Ctrl: 'b',]
         - action: [Quit]
@@ -96,7 +104,7 @@ keybinds:
           key: [ Alt: '-']
     pane:
         - action: [SwitchToMode: Locked,]
-          key: [Ctrl: 'g']
+          key: [Ctrl: 'z']
         - action: [SwitchToMode: Resize,]
           key: [Ctrl: 'n',]
         - action: [SwitchToMode: Tab,]
@@ -108,7 +116,7 @@ keybinds:
         - action: [SwitchToMode: Session,]
           key: [Ctrl: 'o',]
         - action: [SwitchToMode: Move,]
-          key: [Ctrl: 'h',]
+          key: [Ctrl: 'x',]
         - action: [SwitchToMode: Tmux,]
           key: [Ctrl: 'b',]
         - action: [Quit,]
@@ -159,7 +167,7 @@ keybinds:
           key: [Char: 'c']
     move:
         - action: [SwitchToMode: Locked,]
-          key: [Ctrl: 'g']
+          key: [Ctrl: 'z']
         - action: [SwitchToMode: Pane,]
           key: [Ctrl: 'p',]
         - action: [SwitchToMode: Tab,]
@@ -167,7 +175,7 @@ keybinds:
         - action: [SwitchToMode: Resize,]
           key: [Ctrl: 'n',]
         - action: [SwitchToMode: Normal,]
-          key: [Ctrl: 'h', Char: "\n", Char: ' ', Esc]
+          key: [Ctrl: 'x', Char: "\n", Char: ' ', Esc]
         - action: [SwitchToMode: Scroll,]
           key: [Ctrl: 's']
         - action: [SwitchToMode: Session,]
@@ -202,7 +210,7 @@ keybinds:
           key: [ Alt: '-']
     tab:
         - action: [SwitchToMode: Locked,]
-          key: [Ctrl: 'g']
+          key: [Ctrl: 'z']
         - action: [SwitchToMode: Pane,]
           key: [Ctrl: 'p',]
         - action: [SwitchToMode: Resize,]
@@ -212,7 +220,7 @@ keybinds:
         - action: [SwitchToMode: Scroll,]
           key: [Ctrl: 's']
         - action: [SwitchToMode: Move,]
-          key: [Ctrl: 'h',]
+          key: [Ctrl: 'x',]
         - action: [SwitchToMode: Tmux,]
           key: [Ctrl: 'b',]
         - action: [SwitchToMode: Session,]
@@ -273,11 +281,11 @@ keybinds:
         - action: [SwitchToMode: Tab,]
           key: [Ctrl: 't',]
         - action: [SwitchToMode: Locked,]
-          key: [Ctrl: 'g',]
+          key: [Ctrl: 'z',]
         - action: [SwitchToMode: Pane,]
           key: [Ctrl: 'p',]
         - action: [SwitchToMode: Move,]
-          key: [Ctrl: 'h',]
+          key: [Ctrl: 'x',]
         - action: [SwitchToMode: Tmux,]
           key: [Ctrl: 'b',]
         - action: [SwitchToMode: Session,]
@@ -360,13 +368,13 @@ keybinds:
           key: [ Alt: '-']
     session:
         - action: [SwitchToMode: Locked,]
-          key: [Ctrl: 'g']
+          key: [Ctrl: 'z']
         - action: [SwitchToMode: Resize,]
           key: [Ctrl: 'n',]
         - action: [SwitchToMode: Pane,]
           key: [Ctrl: 'p',]
         - action: [SwitchToMode: Move,]
-          key: [Ctrl: 'h',]
+          key: [Ctrl: 'x',]
         - action: [SwitchToMode: Tmux,]
           key: [Ctrl: 'b',]
         - action: [SwitchToMode: Tab,]
@@ -397,13 +405,13 @@ keybinds:
           key: [ Alt: '-']
     tmux:
         - action: [SwitchToMode: Locked,]
-          key: [Ctrl: 'g']
+          key: [Ctrl: 'z']
         - action: [SwitchToMode: Resize,]
           key: [Ctrl: 'n',]
         - action: [SwitchToMode: Pane,]
           key: [Ctrl: 'p',]
         - action: [SwitchToMode: Move,]
-          key: [Ctrl: 'h',]
+          key: [Ctrl: 'x',]
         - action: [SwitchToMode: Tab,]
           key: [Ctrl: 't',]
         - action: [SwitchToMode: Normal,]
